ctm-sf-homeloan-app/main/default/objects/BankruptcyAction__c/BankruptcyAction__c.object-meta.xml
<CustomObject>
    <label>Bankruptcy Action</label>
    <nameField>
        <displayFormat>BA - {000000000}</displayFormat>
        <label>Bankruptcy Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bankruptcy Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>