ctm-sf-homeloan-app/main/default/objects/BankruptcyAction__c/fields/RefNumber__c.field-meta.xml
<CustomField>
    <fullName>RefNumber__c</fullName>
    <label>Ref. Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>