ctm-sf-homeloan-app/main/default/objects/BankruptcyAction__c/fields/TrusteeNumber__c.field-meta.xml
<CustomField>
    <fullName>TrusteeNumber__c</fullName>
    <label>Trustee Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>